added div detail to index html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   </head>
   <body>
     <h1>Welcome</h1>
-    
+
     <div id="content">
+    </div>
+
+    <div id="details">
     </div>
 
     <script src="/assets/bundle.js"></script>
