--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
   </head>
   <body>
-    <div id="content">
+    
+    <div class="container">
+      <div id="content">
+      </div>
     </div>
 
     <script src="/assets/bundle.js"></script>
